tests/extensions/forLoops/syntaxErr/forDonoErr.wacc
# done typo

# Output:
# syntax_error 

# Exit:
# 100

begin
  for (int i = 0; i < 5; i++) do
    skip
  dono
end